tests/paczka1/fuzzy1/71080097.err
Error in line 1: D07g5YUaa S975 29,8
Error in line 10: S975 A454 36,4
Error in line 12: EKhFjL0Efn S429 79,4
Error in line 24: 9akO5fX A232 78,1
Error in line 28: mAp6sSni A454 76,3
Error in line 32: EKhFjL0Efn S975 26,5
Error in line 33: EKhFjL0Efn S429 16,2
